Update to remove 70-

--- a/learn-certs-pr/exams/70-462.yml
+++ b/learn-certs-pr/exams/70-462.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Diese Prüfung ist für Datenbankexperten bestimmt, die Aufgaben zur Installation, Wartung und Konfiguration durchführen. Weitere Aufgaben betreffen die Einrichtung von Datenbanksystemen, sicherzustellen, dass diese Systeme wirksam funktionieren, sowie regelmäßiges Speichern, Sichern und Schützen der Daten vor unbefugtem Zugriff.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tfIN
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-462&examname=Administering%20Microsoft%20SQL%20Server%202012/2014%20Databases&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-462
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=462&examname=Administering%20Microsoft%20SQL%20Server%202012/2014%20Databases&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-462
 locales:
 - en
 - zh-cn
