--- a/learn-certs-pr/exams/70-463.yml
+++ b/learn-certs-pr/exams/70-463.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Diese Prüfung ist in erster Linie für ETL- und Data Warehouse-Entwickler gedacht, die Business Intelligence (BI)-Lösungen erstellen. Zu ihren Aufgaben gehören auch Datenbereinigung, Extraktion, Transformation und Laden sowie Implementierung von Daten-Warehouses.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toVI
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-463&examname=Implementing%20a%20Data%20Warehouse%20with%20Microsoft%20SQL%20Server%202012/2014&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-463
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=463&examname=Implementing%20a%20Data%20Warehouse%20with%20Microsoft%20SQL%20Server%202012/2014&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-463
 locales:
 - en
 - zh-cn
