--- a/learn-certs-pr/exams/70-465.yml
+++ b/learn-certs-pr/exams/70-465.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Diese Prüfung ist für Datenbankexperten gedacht, die mit der Entwicklung und der Erstellung von Datenbanklösungen im Unternehmen betraut sind. Sie sind für die Erstellung der Pläne und Entwürfe für die Datenbankstruktur, den Speicher, der Objekte und Server zuständig. Sie erstellen den Plan für die Umgebung, in der die Datenbanklösung ausgeführt wird.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t560
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-465&examname=Designing%20Database%20Solutions%20for%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-465
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=465&examname=Designing%20Database%20Solutions%20for%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-465
 locales:
 - en
 - zh-cn
