--- a/learn-certs-pr/exams/70-705.yml
+++ b/learn-certs-pr/exams/70-705.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Kandidaten für dieses examens sind Vertriebsprofis, die Lizenzlösungen an große Unternehmen verkaufen. Organisationen in dieser Kategorie haben in der Regel 250 oder mehr Geräte oder Benutzer. Die Kandidaten sollten mindestens sechs Monate Erfahrung im Vertrieb von Microsoft-Lizenzlösungen sowie Grundkenntnisse aller Microsoft-Unternehmenslösungen, einschließlich Enterprise Agreement, Enterprise Subscription Agreement, Cloud Solution Provider (CSP), MPSA, OEM, Open und Open Value, mitbringen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trl8
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-705&examname=Designing%20and%20Providing%20Microsoft%20Licensing%20Solutions%20to%20Large%20Organizations&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-705
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=705&examname=Designing%20and%20Providing%20Microsoft%20Licensing%20Solutions%20to%20Large%20Organizations&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-705
 locales:
 - en
 - zh-cn
