--- a/learn-certs-pr/exams/70-745.yml
+++ b/learn-certs-pr/exams/70-745.yml
@@ -18,7 +18,7 @@ summary: |-
 subTitle: Kandidaten für diese Prüfung sind IT-Experten, die für die Implementierung eines softwaredefinierten Datencenters (SDDC) mit Windows Server 2016 und Microsoft System Center 2016 Virtual Machine Manager (SCVMM) verantwortlich sind.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tp1k
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-745&examname=Implementing%20a%20Software-Defined%20Datacenter&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-745
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=745&examname=Implementing%20a%20Software-Defined%20Datacenter&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-745
 locales:
 - en
 levels:
