--- a/learn-certs-pr/exams/70-777.yml
+++ b/learn-certs-pr/exams/70-777.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Kandidaten für diese Prüfung sind Entwickler und Architekten, die Azure Cosmos DB einsetzen. Kandidaten sollten grundlegende Konzepte der Partitionierung, Replikation und Ressourcenverwaltung verstehen, um skalierbare Anwendungen zu erstellen und zu konfigurieren, die eine Cosmos DB API nicht kennen. Die Kandidaten sollten auch über grundlegende Kenntnisse im Umgang mit der Cosmos DB SQL API verfügen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trjS
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-777&examname=Implementing%20Microsoft%20Azure%20Cosmos%20DB%20Solutions&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-777
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=777&examname=Implementing%20Microsoft%20Azure%20Cosmos%20DB%20Solutions&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-777
 locales:
 - en
 levels:
