--- a/learn-certs-pr/exams/70-778.yml
+++ b/learn-certs-pr/exams/70-778.yml
@@ -14,7 +14,7 @@ summary: |-
 subTitle: Kandidaten für diese Prüfung sollten ein gutes Verständnis davon haben, wie man Power BI verwendet, um Datenanalysen durchzuführen. Die Kandidaten sollten in der Verbindung zu Datenquellen und der Durchführung von Datenumwandlungen, der Modellierung und Visualisierung von Daten mithilfe von Microsoft Power BI Desktop und der Konfiguration von Dashboards unter Verwendung des Power BI Service kompetent sein. Die Kandidaten sollten auch die Implementierung der direkten Konnektivität mit Microsoft SQL Azure und SQL Server Analysis Services (SSAS) und die Implementierung der Datenanalyse in Microsoft Excel beherrschen. Die Kandidaten können BI-Profis, Datenanalysten und andere Rollen, die für die Erstellung von Berichten mit Power BI verantwortlich sind, einschließen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJB
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-778&examname=Analyzing%20and%20Visualizing%20Data%20with%20Microsoft%20Power%20BI&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-778
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=778&examname=Analyzing%20and%20Visualizing%20Data%20with%20Microsoft%20Power%20BI&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-778
 locales:
 - en
 levels:
