--- a/learn-certs-pr/exams/70-779.yml
+++ b/learn-certs-pr/exams/70-779.yml
@@ -14,7 +14,7 @@ summary: |-
 subTitle: Kandidaten für diese Prüfung sollten ein starkes Verständnis davon haben, wie man Microsoft Excel verwendet, um Datenanalysen durchzuführen. Kandidaten sollten in der Lage sein, Daten in Excel zu verwenden, zu transformieren, zu modellieren und zu visualisieren. Kandidaten sollten auch in der Lage sein, Daten in PowerPivot, PivotTables und PivotCharts zu konfigurieren und zu bearbeiten. Kandidaten können BI-Profis, Datenanalysten und andere Rollen, die für die Analyse von Daten mit Excel verantwortlich sind, umfassen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t555
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-779&examname=Analyzing%20and%20Visualizing%20Data%20with%20Microsoft%20Excel&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-779
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=779&examname=Analyzing%20and%20Visualizing%20Data%20with%20Microsoft%20Excel&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-779
 locales:
 - en
 levels:
