--- a/learn-certs-pr/exams/70-797.yml
+++ b/learn-certs-pr/exams/70-797.yml
@@ -20,7 +20,7 @@ summary: |-
 subTitle: Gegenstand dieser Prüfung sind die grundlegenden Kenntnisse und Fähigkeiten eines Kandidaten im Aufbau fester Identitäten, Schutz von Inhalten (Schutz vor Datenverlust), in der Verwaltungsrichtlinie für mobile Geräte, der Virtualisierung mit Hyper-V, der Anwendungsverwaltung über das Unternehmensportal und den Windows Store. Die Kandidaten werden im Hinblick auf Windows 10-Sicherheit und integrierte Azure-Funktionen bewertet.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trjT
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-797&examname=Configuring%20Windows%20Devices&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-797
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=797&examname=Configuring%20Windows%20Devices&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-797
 locales:
 - en
 levels:
