--- a/learn-certs-pr/exams/70-461.yml
+++ b/learn-certs-pr/exams/70-461.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Diese Prüfung ist für Administratoren, Systemingenieure und Entwickler von SQL- Server-Datenbanken mit mindestens zwei Jahren Erfahrung konzipiert, die ihre Fähigkeiten und Kenntnisse im Schreiben von Abfragen bestätigen möchten.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t54W
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-461&examname=Querying%20Microsoft%20SQL%20Server%202012/2014&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-461
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=461&examname=Querying%20Microsoft%20SQL%20Server%202012/2014&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-461
 locales:
 - en
 - zh-cn
