--- a/learn-certs-pr/exams/70-466.yml
+++ b/learn-certs-pr/exams/70-466.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Diese Prüfung ist für Business-Intelligence (BI)-Entwickler gedacht, mit Schwerpunkt auf der Erstellung von BI-Lösungen, für die mehrdimensionale Datenmodelle implementiert, OLAP-Cubes implementiert und verwaltet sowie Informationsanzeigen für die geschäftliche Entscheidungsfindung erstellt werden müssen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trkJ
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-466&examname=Implementing%20Data%20Models%20and%20Reports%20with%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-466
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=466&examname=Implementing%20Data%20Models%20and%20Reports%20with%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-466
 locales:
 - en
 - zh-cn
