--- a/learn-certs-pr/exams/70-467.yml
+++ b/learn-certs-pr/exams/70-467.yml
@@ -16,7 +16,7 @@ summary: |-
 subTitle: Diese Prüfung ist für Business-Intelligence (BI)-Architekten gedacht, die für die Gestaltung einer BI-Infrastruktur und die Beziehungen zu anderen verwendeten Datensystemen verantwortlich sind.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toXf
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=70-467&examname=Designing%20Business%20Intelligence%20Solutions%20with%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-467
+scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=467&examname=Designing%20Business%20Intelligence%20Solutions%20with%20Microsoft%20SQL%20Server&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/70-467
 locales:
 - en
 - zh-cn
