updated 77- to include certiport

--- a/learn-certs-pr/exams/77-418.yml
+++ b/learn-certs-pr/exams/77-418.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Ein Kernkandidat für die Microsoft Word 2013-Prüfung muss über grundlegende Kenntnisse im Umgang mit der Word-Umgebung verfügen und in der Lage sein, Aufgaben eigenständig zu bearbeiten. Sie sollten die korrekte Anwendung der grundlegenden Funktionen von Word 2013 kennen und in der Lage sein, diese zu demonstrieren. Diese Kandidaten sollten in der Lage sein, zwei- dreiseitige Dokumente für eine Vielzahl von Zwecken und Situationen zu erstellen und zu bearbeiten. Dazu gehören zum Beispiel professionell aussehende Berichte, mehrspaltige Newsletter, Lebensläufe und Geschäftskorrespondenz. Kandidaten nehmen dabei u. a. die Rollen von Studenten, Büroangestellten und Kursleitern ein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJC
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-418&examname=Word%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-418
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
