--- a/learn-certs-pr/exams/77-420.yml
+++ b/learn-certs-pr/exams/77-420.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Ein Kernkandidat für die Microsoft Excel 2013-Prüfung muss über grundlegende Kenntnisse im Umgang mit der Excel-Umgebung verfügen und in der Lage sein, Aufgaben eigenständig zu bearbeiten. Sie sollten die korrekte Anwendung der grundlegenden Funktionen von Excel 2013 kennen und in der Lage sein, diese zu demonstrieren. Diese Kandidaten müssen eine Arbeitsmappe mit mehreren Arbeitsblättern zu verschiedenen Zwecken und Situationen erstellen und bearbeiten können. Dazu gehören zum Beispiel professionell aussehende Kostenaufstellungen, Teamleistungstabellen, Rechnungen und Übungsprotokolle. Die Kandidaten nehmen dabei u. a. die Rollen von Studenten, Büroangestellten, Buchhältern und Kursleitern ein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toXa
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-420&examname=Excel%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-420
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
