--- a/learn-certs-pr/exams/77-423.yml
+++ b/learn-certs-pr/exams/77-423.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Kandidaten können Inhalte von E-Mail-Nachrichten mithilfe der Zeichen- und Abschnittsformate formatieren und grafische Elemente wie Diagramme, Tabellen und SmartArt-Grafiken in Nachrichten einfügen. Ebenso können sie Nachrichten an private Empfänger im Bcc-Feld senden. Kandidaten sind in der Lage, Kontaktdatensätze, Aufgaben und Termine aus eingehenden Nachrichten zu erstellen sowie Kontaktgruppen einzurichten, um die Kommunikation mit anderen Outlook-Benutzern zu ermöglichen. Darüber hinaus können sie Terminplaninformationen mit anderen Outlook-Benutzern teilen. Kandidaten planen Besprechungen, bei denen Personen und Systemressourcen beteiligt sind, und sie delegieren Aufgaben an andere. Kernbenutzer personalisieren das Outlook-Fenster und die Symbolleiste für den Schnellzugriff, um die Effizienz zu maximieren. Sie organisieren Nachrichten und andere Outlook-Elemente und zeigen verschiedene Ansichten der E-Mail-Ordner sowie des Kalenders, des Adressbuchs und der Aufgabenliste an. Sie können auch mehrere Kalender anzeigen und Kalender für andere Outlook-Benutzer freigeben.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tiMb
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-423&examname=Outlook%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-423
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-tw
