--- a/learn-certs-pr/exams/77-424.yml
+++ b/learn-certs-pr/exams/77-424.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: dieses examens richtet sich an Kandidaten mit einem grundlegenden Verständnis der Access 2013-Umgebung und der Fähigkeit, Aufgaben eigenständig zu bearbeiten. Sie sollten die korrekte Anwendung der grundlegenden Funktionen von Access 2013 kennen und in der Lage sein, diese zu demonstrieren.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tnJp
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-424&examname=Access%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-424
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
