--- a/learn-certs-pr/exams/77-427.yml
+++ b/learn-certs-pr/exams/77-427.yml
@@ -14,7 +14,7 @@ summary: |-
 subTitle: Kandidaten, die als Experten für die Microsoft Excel 2013-Prüfung gelten, sollten fortgeschrittene Kenntnisse der Excel-Umgebung aufweisen und andere bei der sachgemäßen Nutzung der Funktionen in Excel 2013 von Office Professional Plus anleiten können. Sie sollten die erweiterten und speziellen Funktionen der Anwendung kennen und demonstrieren können.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t557
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-427&examname=Excel%202013%20Expert%20Part%20One&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-427
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
