--- a/learn-certs-pr/exams/77-601.yml
+++ b/learn-certs-pr/exams/77-601.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Kandidaten für dieses examens sollten über sechs Monate bis zu einem Jahr praktische Erfahrung beim Erstellen von Geschäftsergebnissen mit Microsoft Office Word 2007 verfügen und evtl. Erfahrung mit früheren Versionen von Office Word haben. Diese Kandidaten sind besonders gut darin, Dokumente mit Hilfe von Formatierungen und visuellen Inhalten zu erstellen, anzupassen und zu organisieren, die für die präsentierten Informationen geeignet sind. Sie sind auch besonders gut darin, Inhalte zu überprüfen, zu teilen und zu sichern.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t57w
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-601&examname=MOS:%20Using%20Microsoft%20Office%20Word%202007&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-601
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - ru
