--- a/learn-certs-pr/exams/77-602.yml
+++ b/learn-certs-pr/exams/77-602.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Kandidaten für dieses examens sollten über sechs Monate bis zu einem Jahr praktische Erfahrung beim Erstellen von Geschäftsergebnissen mit Microsoft Office Excel 2007 verfügen und evtl. Erfahrung mit früheren Versionen von Office Excel haben. Diese Kandidaten sind besonders effektiv und effizient beim Erstellen und Bearbeiten von Daten, beim Formatieren von Daten und Inhalten, beim Erstellen und Ändern von Formeln, beim visuellen Präsentieren von Daten sowie beim Zusammenarbeiten mit und Sichern von Daten.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t57x
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-602&examname=MOS:%20Using%20Microsoft%20Office%20Excel%202007&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-602
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - ru
