--- a/learn-certs-pr/exams/77-421.yml
+++ b/learn-certs-pr/exams/77-421.yml
@@ -14,7 +14,7 @@ summary: |-
 subTitle: Kandidaten für die Prüfung Microsoft OneNote 2013 müssen über grundlegende Kenntnisse im Umgang mit der OneNote-Umgebung verfügen und in der Lage sein, Aufgaben eigenständig zu erledigen. Sie sollten die korrekte Anwendung der Hauptmerkmale von OneNote 2013 kennen und nachweisen.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trkE
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-421&examname=Microsoft%20OneNote%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-421
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - nb
