--- a/learn-certs-pr/exams/77-422.yml
+++ b/learn-certs-pr/exams/77-422.yml
@@ -18,7 +18,7 @@ summary: |-
 subTitle: 'Kandidaten für dieses examens sind IT-Experten, die mit Hilfe von Office sichere und flexible Anwendungen erstellen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4toXb
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-422&examname=PowerPoint%202013&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-422
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
