--- a/learn-certs-pr/exams/77-425.yml
+++ b/learn-certs-pr/exams/77-425.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Kandidaten, die als Experten für die Microsoft Word 2013-Prüfung gelten, sollten fortgeschrittene Kenntnisse der Word-Umgebung haben und andere bei der richtigen Nutzung der Funktionen in Word 2013 anleiten können. Kandidaten sollten die erweiterten und speziellen Funktionen der Anwendung kennen und demonstrieren können. Kandidaten sollten in der Lage sein, professionelle Dokumente für vielerlei Zwecke und Situationen zu erstellen, zu verwalten und zu verteilen. Sie sollten ihre Word-Umgebung anpassen können, um Anforderungen zu erfüllen und die Produktivität zu verbessern. Zu den Beispieldokumenten gehören Geschäftspläne, Rechtsdokumente, Werbebroschüren und Serienbriefe. Die Kandidaten nehmen dabei u. a. die Rollen von Bearbeitern, Projektmanagern, Kursleitern, Diplomanwärtern und technischen Autoren ein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4t556
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-425&examname=Word%202013%20Expert%20Part%20One&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-425
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
