--- a/learn-certs-pr/exams/77-426.yml
+++ b/learn-certs-pr/exams/77-426.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: dieses examens ist für erfahrene Kandidaten mit umfassenden Kenntnissen der Word-Umgebung gedacht, die andere in der richtigen Verwendung der Funktionen von Word 2013 anleiten können. Kandidaten sollten die erweiterten und speziellen Funktionen der Anwendung kennen und demonstrieren können. Kandidaten sollten in der Lage sein, professionelle Dokumente für eine Vielzahl spezieller Zwecke und Situationen zu erstellen, zu verwalten und zu verteilen. Darüber hinaus sollten sie ihre Word-Umgebungen so anpassen können, dass bestimmte Anforderungen erfüllt und die Produktivität gesteigert wird. Zu den Beispieldokumenten gehören Geschäftspläne, Rechtsdokumente, Werbebroschüren und Serienbriefe. Die Kandidaten nehmen dabei u. a. die Rollen von Bearbeitern, Projektmanagern, Kursleitern, Diplomanwärtern und technischen Autoren ein.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tfIV
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-426&examname=Word%202013%20Expert%20Part%20Two&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-426
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
