--- a/learn-certs-pr/exams/77-881.yml
+++ b/learn-certs-pr/exams/77-881.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Der Benutzer auf Basis von Microsoft Office Word 2010 sollte in der Lage sein, die Microsoft Office Word 2010-Software auf der Funktions- und Funktionsebene zu bedienen. Sie sollten mit mindestens 80 Prozent der Funktionen und Fähigkeiten von Microsoft Office Word 2010 vertraut sein und wissen, wie man diese nutzt. Der Basis-Benutzer sollte in der Lage sein, Microsoft Office Word 2010 zu verwenden, um professionell aussehende Dokumente für eine Vielzahl von Zwecken und Situationen zu erstellen und zu bearbeiten. Zu den Nutzern gehören Menschen aus den unterschiedlichsten Berufsgruppen aus fast allen Bereichen des Berufs-, Studenten- und Privatlebens.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4trjX
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-881&examname=Word%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-881
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
