--- a/learn-certs-pr/exams/77-883.yml
+++ b/learn-certs-pr/exams/77-883.yml
@@ -14,7 +14,7 @@ summary: |-
 subTitle: Der typische Kandidat für die Prüfung ist ein Student, Büroangestellter oder Ausbilder, der PowerPoint 2010 auf der Funktions- und Funktionsebene navigieren muss.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tkyU
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-883&examname=MOS:%20PowerPoint%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-883
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
