--- a/learn-certs-pr/exams/77-885.yml
+++ b/learn-certs-pr/exams/77-885.yml
@@ -12,7 +12,7 @@ summary: |-
 subTitle: Der typische Kandidat für die Prüfung arbeitet als Benutzer-Support-Profi, Trainer, Lehrer, Professor, Datenbankbenutzer oder Datenbankersteller, der eine grundlegende Access-Datenbank erstellen oder pflegen muss. Benutzer können die Funktionalität grundlegender Datenbankobjekte, einschließlich Tabellen, Abfragen, Formulare und Berichte, erstellen, ändern und erweitern. Benutzer können auch grundlegende Beziehungen zwischen Datenbankeinheiten aufbauen und ändern und andere in der grundlegenden Zugriffsfunktionalität und -nutzung unterweisen. Der Access 2010-Benutzer ist in der Regel effektiv beim Erstellen, Ändern und Personalisieren von Objekten. Dieser Kandidat ist in der Lage, selbständig an Datenbankprojekten zu arbeiten und kann oft Fragen von anderen über Datenbanken beantworten. Kandidaten sollten wissen und demonstrieren, wie man eine einfache Access-Datenbank erstellt oder ändert und Vorlagen für die Erstellung von Basisobjekten verwenden.
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4tiDl
-scheduleExamUrl: https://examregistration.microsoft.com/?action=1&locale=de-de&examcode=77-885&examname=Access%202010&returnToLearningUrl=https://docs.microsoft.com/learn/certifications/exams/77-885
+scheduleExamUrl: https://www.certiport.com/locator
 locales:
 - en
 - zh-cn
