June pending loc batch 4

--- a/learn-certs-pr/TOC.yml
+++ b/learn-certs-pr/TOC.yml
@@ -1,9 +1,11 @@
 - name: Microsoft-Zertifizierungen
   href: index.yml
-- name: Angebote
+- name: Offers
   href: deals.md
 - name: Volumen-Lizensierung
   href: volume-licensing-program.md
+- name: Microsoft Learning Partners
+  href: partners.md
 - name: Eingestellte Zertifizierungen, Prüfungen und Kurse
   expanded: false
   items:
@@ -13,9 +15,19 @@
     href: retired-certification-exams.md 
   - name: Eingestellte Kurse
     href: retired-courses.md
-- name: MCT-Zertifizierung
+- name: Werden Sie ein Microsoft zertifizierter Trainer
   href: mct-certification.md
+- name: Informationen zu Microsoft-Zertifizierungsexamen
+  href: certification-exams.md
+- name: Microsoft Prüfungs- und Zertifizierungsabzeichen
+  href: badges.md
+- name: Über Online-Prüfungen
+  href: online-exams.md
 - name: Prüfungsrichtlinien und FAQs
   href: certification-exam-policies.md
 - name: Zertifizierungshilfe
   href: help.md
+- name: Häufig gestellte Fragen zum Microsoft-Zertifizierungsprogramm 
+  href: microsoft-certification-program-faqs.md
+- name: Microsoft Learning verschieben...
+  href: learnfaq.md
