--- a/learn-certs-pr/courses/da-100t00.yml
+++ b/learn-certs-pr/courses/da-100t00.yml
@@ -1,8 +1,8 @@
 ### YamlMime:Course
-title: Analyzing Data with Power BI
+title: Analyzing Data with Microsoft Power BI
 metadata:
-  title: 'Course DA-100T00-A: Analyzing Data with Power BI'
-  description: 'Course DA-100T00-A: Analyzing Data with Power BI'
+  title: 'Course DA-100T00-A: Analyzing Data with Microsoft Power BI'
+  description: 'Course DA-100T00-A: Analyzing Data with Microsoft Power BI'
 uid: course.da-100t00
 courseNumber: 'DA-100T00-A'
 hoursToComplete: 120
@@ -26,7 +26,7 @@ products:
 exams:
 - uid: exam.da-100
 summary: |-
-  In diesem Kurs werden die verschiedenen Methoden sowie die beste Vorgehensweise erläutert, die den geschäftlichen und technischen Anforderungen für die Modellierung, Visualisierung und Analyse von Daten mit Power BI entsprechen. Der Kurs zeigt auch, wie auf Daten aus einer Reihe von Datenquellen zugegriffen und diese verarbeitet werden können, einschließlich relationaler und nicht relationaler Daten. In diesem Kurs wird auch erläutert, wie geeignete Sicherheitsstandards und -richtlinien im gesamten Power BI-Spektrum, einschließlich Datensätzen und Gruppen, implementiert werden. In diesem Kurs wird auch erläutert, wie man Berichte und Dashboards für die Freigabe und Verteilung von Inhalten verwalten und bereitstellen kann. Schließlich wird in diesem Kurs gezeigt, wie paginierte Berichte innerhalb des Power BI-Services erstellt und in einem Arbeitsbereich zur Aufnahme in Power BI veröffentlicht werden.
+  Dieser Kurs wird am 24. Juli 2020 veröffentlicht. In diesem Kurs werden die verschiedenen Methoden sowie die beste Vorgehensweise erläutert, die den geschäftlichen und technischen Anforderungen für die Modellierung, Visualisierung und Analyse von Daten mit Power BI entsprechen. Der Kurs zeigt auch, wie auf Daten aus einer Reihe von Datenquellen zugegriffen und diese verarbeitet werden können, einschließlich relationaler und nicht relationaler Daten. In diesem Kurs wird auch erläutert, wie geeignete Sicherheitsstandards und -richtlinien im gesamten Power BI-Spektrum, einschließlich Datensätzen und Gruppen, implementiert werden. In diesem Kurs wird auch erläutert, wie man Berichte und Dashboards für die Freigabe und Verteilung von Inhalten verwalten und bereitstellen kann. Schließlich wird in diesem Kurs gezeigt, wie paginierte Berichte innerhalb des Power BI-Services erstellt und in einem Arbeitsbereich zur Aufnahme in Power BI veröffentlicht werden.
 
   #### Zielgruppenprofil
   Die Zielgruppe für diesen Kurs sind Datenprofis und Business Intelligence-Experten, die lernen möchten, wie man akkurate Datenanalysen mit Power BI drchführen kann. Dieser Kurs richtet sich auch an Personen, die Berichte entwickeln, die Daten aus Datenplattformtechnologien visualisieren, die sowohl in der Cloud als auch lokal vorhanden sind.
@@ -40,7 +40,7 @@ outlineSection: |-
   - Identifizieren von Aufgaben des Datenanalysten
 
 
-  #### Lab &#58; Erste Schritte
+  #### Labor &#58; Erste Schritte
   - Erste Schritte
 
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
@@ -58,7 +58,7 @@ outlineSection: |-
   - Daten-Profiling
 
 
-  #### Lab &#58; Vorbereiten von Daten in Power BI Desktop
+  #### Labor &#58; Vorbereiten von Daten in Power BI Desktop
   - Daten vorbereiten
 
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
@@ -79,7 +79,7 @@ outlineSection: |-
   - Konfigurieren des Ladens und Beheben von Fehlern
 
 
-  #### Lab &#58; Laden von Daten in Power BI Desktop
+  #### Labor &#58; Laden von Daten in Power BI Desktop
   - Daten laden
 
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
@@ -97,7 +97,7 @@ outlineSection: |-
   - Modell-Performance
 
 
-  #### Lab &#58; Datenmodellierung in Power BI Desktop
+  #### Labor &#58; Datenmodellierung in Power BI Desktop
   - Modellbeziehungen erstellen
   - Tabellen konfigurieren
   - Die Modellschnittstelle überprüfen
@@ -139,11 +139,11 @@ outlineSection: |-
   - Zeitintelligenz-Funktionen
 
 
-  #### Lab &#58; Verwenden von DAX in Power BI - Teil 1
+  #### Labor &#58; Verwenden von DAX in Power BI - Teil 1
   - Kalkulierte Tabellen erstellen
   - Maßnahmen erstellen
 
-  #### Lab &#58; Verwenden von DAX in Power BI - Teil 2
+  #### Labor &#58; Verwenden von DAX in Power BI - Teil 2
   - Arbeiten mit Filterinhalten
   - Arbeiten mit Zeitintelligenz
   - Veröffentlichen der Power BI Desktop-Datei
@@ -178,7 +178,7 @@ outlineSection: |-
   - Verbesserung des Berichts
 
 
-  #### Lab &#58; eines Berichts in Power BI Desktop - Teil 1
+  #### Labor &#58; eines Berichts in Power BI Desktop - Teil 1
   - Bericht erstellen
   - Anmelden beim Power BI-Service
 
@@ -197,7 +197,7 @@ outlineSection: |-
   - Berichte verbessern
 
 
-  #### Lab &#58; eines Berichts in Power BI Desktop - Teil 2
+  #### Labor &#58; eines Berichts in Power BI Desktop - Teil 2
   - Konfigurieren von Sync Slicer
   - Drillthrough konfigurieren
   - Bedingte Formatierung hinzufügen
@@ -205,7 +205,7 @@ outlineSection: |-
   - Durchsuchen eines Berichts
 
   Nach Abschluss dieses Moduls sind die Teilnehmer in der Lage&#58;
-  -Quick Insights hinzufügen
+  - Quick Insights hinzufügen
   - Konfigurieren von Sync Slicer
   - Konfigurieren von Interaktionen zwischen visuellen Elementen
   - Verbesserungen der Benutzerfreundlichkeit identifizieren
@@ -241,7 +241,7 @@ outlineSection: |-
   - Erweiterte Analyse
 
 
-  #### Lab &#58; Datenanalyse in Power BI Desktop
+  #### Labor &#58; Datenanalyse in Power BI Desktop
   - Bericht erstellen
   - Erstellen eines Streudiagramms
   - Erstellen einer Prognose
@@ -266,7 +266,7 @@ outlineSection: |-
   - Teilen und Verteilen von Inhalten
 
 
-  #### Lab &#58; Veröffentlichen und Freigeben von Power BI-Inhalten
+  #### Labor &#58; Veröffentlichen und Freigeben von Power BI-Inhalten
   - Konfigurieren von Datensatzsicherheit
   - Teilen eines Dashboard
   - Veröffentlichen einer APP
@@ -288,7 +288,7 @@ outlineSection: |-
   - Verbessern und Veröffentlichen von Berichten
 
 
-  #### Lab &#58; Erstellen eines paginierten Berichts
+  #### Labor &#58; Erstellen eines paginierten Berichts
   - Erste Schritte
   - Entwickeln des Berichts
 
