--- a/learn-certs-pr/exams/mb-200.yml
+++ b/learn-certs-pr/exams/mb-200.yml
@@ -8,7 +8,7 @@ displayName: MB-200
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am  1. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div style='font-weight&#58; bold;'> Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sind funktionale Berater, die Zugang zu den Funktionen und der Funktionalität des unternehmenslizenzierten Produkts haben. Als funktionaler Berater kennt der Kandidat gebündelte Versionen von Features, arbeitet aber nicht in erster Linie mit diesen gebündelten Produkten.
@@ -16,7 +16,7 @@ summary: |-
   Die Kandidaten sind in erster Linie dafür verantwortlich, das System so zu konfigurieren, dass es den Kundenbedürfnissen entspricht, Designaufgaben im Zusammenhang mit der Implementieren neuer Funktionen und Funktionen sowie der Implementieren und dem Test von Systemänderungen durchzuführen.
 
   Die Kandidaten planen das funktionale Design für Lösungen, setzen einen Application Lifecycle Management (ALM)-Prozess um, migrieren Daten und Objekte aus Legacy-Systemen und externen Systemen, integrieren Power Platform mit anderen Systemen und verwalten die Power Platform-Umgebung.
-subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Erkennen, Planen und Analysieren, Verwalten von Benutzererfahrungsdesign, Verwalten von Einheiten und Daten, Implementieren von Sicherheit, Implementieren von Integration, und Durchführen von Lösungsimplementierungen und Tests.'
+subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Erkennen, Planen und Analysieren, Verwalten von Benutzererfahrungsdesign, Verwalten von Einheiten und Daten, Implementieren von Sicherheit, Implementieren von Integration, und Durchführen von Lösungsimplementierungen und Tests.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3Vzxb
 practiceTestUrl: https://www.mindhub.com/p/MU-MB-200?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -27,12 +27,12 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am  1. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Erkennen von Anforderungen, Analyse und Planung (5-10%)
 - Erstellen und Verwalten des Benutzererlebnisdesigns (20-25%)
 - Verwalten von Entitäten und Daten (15-20%)
 - Sicherheit implementieren (5-10%)
-- Integration implementieren (15-20%)
+- Integration umsetzen (15-20%)
 - Durchführung von Lösungsimplementierungen und Tests (25-30%)
 roles:
 - functional-consultant
