--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -8,7 +8,7 @@ displayName: MB-210
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am  1. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div style='font-weight&#58; bold;'> Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sind Dynamics 365 Funktionsberater mit Vertriebserfahrung. Die Kandidaten sind für die Implementieren von Lösungen verantwortlich, die einen Vertriebslebenszyklus unterstützen, um effizient und effektiv zu arbeiten und Umsatzziele, Geschäftsstrategien und Unternehmensziele zu erreichen.
@@ -16,7 +16,7 @@ summary: |-
   Die Kandidaten sind verantwortlich für die Konfiguration und Erweiterung der Kernfunktionalität von Leitfäden, Kontakten, Konten, Verkaufschancen und unterstützenden Einrichtungen, um die im Unternehmen bestehenden Verkaufsprozesse abzubilden. Sie identifizieren Möglichkeiten, Power Apps zu nutzen, um einheitliche Erlebnisse für alle Geräte zu entwickeln, Power Automate für die Anwendungsintegration, Geschäftsprozessabläufe und andere Automatisierungstools, um eine Anwendung zu erstellen, die die "Lead to cash journey" unterstützt und beschleunigt.
 
   Die Kandidaten müssen über fundierte betriebswirtschaftliche Kenntnisse und vorzugsweise über erste persönliche Erfahrungen im Vertrieb in einer oder mehreren Vertriebsfunktionen verfügen.
-subTitle: 'dieses examens misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfiguration durchführen, Kernverkaufseinheiten verwalten und Verkaufseinheiten verwalten.'
+subTitle: 'Diese Prüfung misst Ihre Kompetenz, die folgenden technischen Aufgaben zu erfüllen: Konfiguration durchführen, Kernverkaufseinheiten verwalten und Verkaufseinheiten verwalten.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjN
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-210&examname=Exam%20MB-210:%20Microsoft%20Dynamics%20365%20for%20Sales&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-210
@@ -25,9 +25,9 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am  1. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Konfiguration durchführen (40-45%)
-- Kern-Verkaufsbereiche verwalten (20-25%)
+- Verwaltung der wichtigsten Verkaufseinheiten (20-25%)
 - Verkaufsbereiche verwalten (35-40%)
 roles:
 - functional-consultant
