--- a/learn-certs-pr/exams/mb-230.yml
+++ b/learn-certs-pr/exams/mb-230.yml
@@ -8,7 +8,7 @@ displayName: MB-230
 summary: |-
   <div>
   <div style='color&#58; red;'><strong>Als Reaktion auf die Situation mit dem Coronavirus (COVID-19) führt Microsoft mehrere vorübergehende Änderungen an unserem Schulungs- und Zertifizierungsprogramm durch. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Mehr erfahren</a>.</strong><br/><br/></div>
-  <div style='font-weight&#58; bold;'>Der Inhalt dieser Prüfung wurde am  1. Mai 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
+  <div style='font-weight&#58; bold;'> Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie das untenstehende Dokument „Skills measured” herunter, um zu sehen, was sich geändert hat.<br/><br/></div>
   </div>
 
   Kandidaten für dieses examens sind Dynamics 365 Funktionsberater mit Kundendienstkompetenz. Die Kandidaten sind für die Umsetzung von Omnichannel-Lösungen verantwortlich, die sich auf Service, Qualität, Zuverlässigkeit, Effizienz und Kundenzufriedenheit konzentrieren.
@@ -19,7 +19,7 @@ summary: |-
   Die Kandidaten müssen über fundiertes angewandtes Wissen verfügen, das den Benutzerbedürfnissen über den Dynamics 365 Customer Service entspricht, einschließlich eines detaillierten Verständnisses von Fällen, Wissensdatenbank, Warteschlangen, Berechtigungen, Service Level Agreements (SLAs), Visualisierungen und Unified Service Desk.
 
   Die Kandidaten sollten die Terminologie der Branche, Prioritäten, Standards, Methoden, Kundendienstabläufe und bewährte Verfahren verstehen. Die Kandidaten sollten ein umfassendes Verständnis der Rolle der Kundendienstanwendung in Bezug auf die Anwendungssuite Dynamics 365 sowie ein grundlegendes Verständnis der Lösungsarchitektur und Qualitätssicherung mitbringen.
-subTitle: 'dieses examens misst Ihre Fähigkeit, folgende technische Aufgaben auszuführen: Konfiguration durchführen, Fälle und die Wissensbasis verwalten, Verwalten von Warteschlangen, Berechtigungen und SLAs und konfigurieren von Forms Pro.'
+subTitle: 'dieses examens misst Ihre Fähigkeit, folgende technische Aufgaben auszuführen: Konfiguration durchführen, Fälle und die Wissensbasis verwalten, Verwalten von Warteschlangen, Berechtigungen und SLAs und konfigurieren von Forms Pro. '
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VJVu
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MB-230&examname=Exam%20MB-230:%20Microsoft%20Dynamics%20365%20for%20Customer%20Service&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-230
@@ -28,7 +28,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Der Inhalt dieser Prüfung wurde am  1. Mai 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
+- Der Inhalt dieser Prüfung wurde am 1. Juli 2020 aktualisiert. Bitte laden Sie die unten stehende Übersicht über die Prüfungsfertigkeiten herunter, um zu sehen, was sich geändert hat.
 - Konfiguration durchführen (25-30%)
 - Verwalten von Anfragen und Wissensdatenbank (30-35%)
 - Verwalten von Warteschlangen, Berechtigungen und SLAs (25-30%)
@@ -46,7 +46,7 @@ paths:
 - uid: learn-bizapps.customer-service-hub-cases-slas
 - uid: learn-bizapps.work-with-entitlements-and-slas-dyn365-customer-service
 - uid: learn-bizapps.work-with-knowledge-management-solutions-dyn365-customer-service
-- uid: learn-bizapps.dyn365-voice-of-customer
+- uid: learn-dynamics.create-forms
 relatedCertifications:
 - related:
     uid: certification.d365-functional-consultant-customer-service
