--- a/learn-certs-pr/exams/ms-203.yml
+++ b/learn-certs-pr/exams/ms-203.yml
@@ -15,7 +15,7 @@ summary: |-
   Messaging-Administratoren arbeiten mit dem Sicherheitsadministrator sowie dem Microsoft 365 Enterprise-Administrator zusammen, um eine sichere Hybrid-Topologie oder eine Topologie nur für Cloud zu implementieren, die die Geschäftsanforderungen eines Unternehmens erfüllt.
 
   Der Messaging-Administrator sollte über gute Kenntnisse in den Bereichen Authentifizierung, Lizenzierung und Integration mit Microsoft 365-Anwendungen verfügen.
-subTitle: 'In dieser Prüfung wird Ihre Fähigkeit bewertet, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Organisationseinstellungen und Ressourcen; Planen und Verwalten der Mail-Architektur; Planen und Implementieren einer hybriden Konfiguration und Migration und Sichern der Messaging-Umgebung.'
+subTitle: 'In dieser Prüfung wird Ihre Fähigkeit bewertet, die folgenden technischen Aufgaben zu erfüllen: Verwalten von Organisationseinstellungen und Ressourcen; Planen und Verwalten der Mail-Architektur; Planen und Implementieren einer hybriden Konfiguration und Migration und Sichern der Messaging-Umgebung. '
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4xqnc
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-de&examcode=MS-203&examname=Exam%20MS-203:%20Microsoft%20365%20Messaging&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-203
@@ -32,6 +32,8 @@ roles:
 - administrator
 products:
 - m365
+courses:
+- uid: course.ms-203t00
 relatedCertifications:
 - related:
     uid: certification.m365-messaging-administrator
